--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,12 @@
 $white: hsl(0, 0%, 100%);
-$linear-gradient: hsl(236, 72%, 79%) to hsl(237, 63%, 64%);
+$light-purple: hsl(236, 72%, 79%);
+$deep-purple: hsl(237, 63%, 64%);
+$linear-gradient: linear-gradient(135deg, $light-purple 0%, $deep-purple 100%);
 $very-light-grayish-blue: hsl(240, 78%, 98%);
 $light-grayish-blue: hsl(234, 14%, 74%);
 $grayish-blue: hsl(233, 13%, 49%);
 $dark-grayish-blue: hsl(232, 13%, 33%);
+$shadow: hsla(244, 61%, 89%, 0.5);
 
 
 $font-montserrat: 'Montserrat', sans-serif;
@@ -31,8 +34,140 @@ body, html {
 }
 
 .page {
-    height: 100vh;
+    min-height: 100vh;
+    background: $very-light-grayish-blue;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: {
+        top: 7.1rem;
+        bottom: 10.3rem;
+    };
 }
+
+.header {
+    font-size: 32px;
+    line-height: 39px;
+    color: $grayish-blue;
+    margin-bottom: 4rem;
+}
+
+.toggle {
+    margin-bottom: 6.4rem;
+    &__option {
+        color: $grayish-blue;
+        font-size: 1.5rem;
+        line-height: 2.8rem;
+        opacity: .5;
+    }
+}
+
+.grid {
+    display: flex;
+    align-items: center;
+}
+
+.card {
+    width: 35rem;
+    height: 45.3rem;
+    background: $white;
+    box-shadow: 0px 2rem 4rem $shadow;
+    border-radius: 1rem;
+    padding: 3.1rem;
+    text-align: center;
+
+    &.selected {
+        height: 50.1rem;
+        background: $linear-gradient;
+        padding: 5.5rem 3.1rem;
+    }
+
+    &__header {
+        color: $grayish-blue;
+        font-size: 1.8rem;
+        line-height: 2.8rem;
+        margin-bottom: 2.4rem;
+
+        .selected & {
+            color: $white;
+        }
+    }
+
+    &__price {
+        margin-bottom: 3.2rem;
+        color: $dark-grayish-blue;
+        font-size: 7.2rem;
+        line-height: 7.1rem;
+        letter-spacing: -.216rem;
+        display: flex;
+        justify-content: center;
+
+        .selected & {
+            color: $white;
+        }
+
+        span {
+            font-size: 4rem;
+            line-height: 4.9rem;
+            letter-spacing: -.12rem;
+            align-self: center;
+            margin-right: .8rem;
+        }
+
+        &--annually {
+            display: none;
+        }
+    }
+
+    .card__options {
+        height: 16rem;
+        margin-bottom: 3.2rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+    &__divider {
+        height: 1px;
+        background: $grayish-blue;
+        opacity: .25;
+
+        .selected & {
+            background: $white;
+        }
+    }
+
+    &__option {
+        color: $grayish-blue;
+        font-size: 1.5rem;
+        line-height: 2.8rem;
+
+        .selected & {
+            color: $white;
+        }
+    }
+
+    &__btn {
+        width: 100%;
+        height: 4.4rem;
+        background: $linear-gradient;
+        border-radius: .6rem;
+        border: none;
+        outline: none;
+        color: $white;
+        font-weight: $fw-700;
+        font-size: 1.3rem;
+        line-height: 1.6rem;
+        letter-spacing: .139rem;
+        text-transform: uppercase;
+
+        .selected & {
+            background: $white;
+            color: $deep-purple;
+        }
+    }
+}
+
 
 @media screen and (max-width: $desktop) {
     body, html {
