--- a/style.css
+++ b/style.css
@@ -131,7 +131,7 @@ body, html {
   align-self: center;
   margin-right: 0.8rem;
 }
-.card__price--annually {
+.card__price.hide {
   display: none;
 }
 .card .card__options {
