--- a/style.scss
+++ b/style.scss
@@ -169,7 +169,7 @@ body, html {
             margin-right: .8rem;
         }
 
-        &--annually {
+        &.hide {
             display: none;
         }
     }
