--- a/style.css
+++ b/style.css
@@ -16,8 +16,26 @@ body, html {
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
+  overflow-x: clip;
   padding-top: 7.1rem;
   padding-bottom: 10.3rem;
+}
+
+.img {
+  position: absolute;
+}
+.img--1 {
+  width: 37.5rem;
+  height: 65.8rem;
+  right: 0;
+  top: 0;
+}
+.img--2 {
+  width: 35.3rem;
+  height: 30.4rem;
+  left: 0;
+  bottom: 0;
 }
 
 .header {
@@ -83,6 +101,7 @@ body, html {
 .grid {
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .card {
