--- a/style.scss
+++ b/style.scss
@@ -39,10 +39,30 @@ body, html {
     display: flex;
     flex-direction: column;
     align-items: center;
+    position: relative;
+    overflow-x: clip;
     padding: {
         top: 7.1rem;
         bottom: 10.3rem;
     };
+}
+
+.img {
+    position: absolute;
+
+    &--1 {
+        width: 37.5rem;
+        height: 65.8rem;
+        right: 0;
+        top: 0;
+    }
+
+    &--2 {
+        width: 35.3rem;
+        height: 30.4rem;
+        left: 0;
+        bottom: 0;
+    }
 }
 
 .header {
@@ -118,6 +138,7 @@ body, html {
 .grid {
     display: flex;
     align-items: center;
+    position: relative;
 }
 
 .card {
