--- a/style.css
+++ b/style.css
@@ -219,6 +219,45 @@ body, html {
   body, html {
     font-size: 11.04px;
   }
+
+  .page {
+    padding-top: 6.4rem;
+    padding-bottom: 7.1rem;
+  }
+
+  .img--1 {
+    right: -19.5rem;
+    top: -3rem;
+  }
+  .img--2 {
+    display: none;
+  }
+
+  .toggle {
+    margin-bottom: 8rem;
+  }
+
+  .grid {
+    flex-direction: column;
+    gap: 3.2rem;
+  }
+
+  .card {
+    width: 32.7rem;
+    padding: 3.1rem 2.9rem;
+  }
+  .card:first-child {
+    border-top-right-radius: 1rem;
+    border-bottom-right-radius: 1rem;
+  }
+  .card:last-child {
+    border-top-left-radius: 1rem;
+    border-bottom-left-radius: 1rem;
+  }
+  .card.selected {
+    height: 45.4rem;
+    padding: 3.1rem 2.9rem;
+  }
 }
 @media screen and (max-width: 400px) {
   body, html {
